@@ -43,6 +43,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Strengthened escaping of user web data by including some characters that
+      some older browsers misinterpret as < or >.
+
     - Mailman now sets the 'secure' flag in cookies set via https URLs.
       Bug #770377.
 
